More misc automated cleanup